[package]
name = "raft-grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = {  version = "0.9" , features = ["tls", "tls-roots"] }
prost = "0.11"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.4", features = ["add-extension", "util"] }
hyper = "0.14.27"
rustls-pemfile = "1.0.4"
tokio-rustls = { version = "0.24.0" }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
log = "0.4.20"
rand = "0.8.5"

[build-dependencies]
rcgen = "0.13.1"
tonic-build = "0.9"
