[package]
name = "risdb-deploy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.0", features = ["derive"] }
superconsole = "0.2.0"
tokio = { workspace = true , features = ["macros", "process", "io-util", "signal", "sync", "rt-multi-thread"] }
tokio-util = "0.7"
unicode-segmentation = "1.11"

[[bin]]
name = "risdb-deploy"
path = "src/main.rs"
