[package]
name = "risdb-hyper"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { workspace = true, features = ["full"] }
tokio = { workspace = true, features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tower = "0.4"
serde_json = "1"
serde = { version = "1.0.186", features = ["derive"] }

## TLS dependencies
tokio-rustls = "0.26"
hyper-rustls = { version = "0.27", features = ["http2"] }
rustls = "0.23"
rustls-pemfile = "2.1.2"
rustls-pki-types = "1"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"