[package]
name = "risdb-hyper"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { workspace = true, features = ["full"] }
tokio = { workspace = true, features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
prost = "0.12"
tower = "0.4"
serde_json = "1"
serde = { version = "1.0.186", features = ["derive"] }
log = "0.4.20"
tracing = "0.1.37"
prost-build = "0.12.6"

## Local dependencies
raft-grpc = { path = "../raft-grpc", version = "0.1.0" }

## TLS dependencies
tokio-rustls = "0.26"
hyper-rustls = { version = "0.27", features = ["http2"] }
rustls = "0.23"
rustls-pemfile = "2.1.2"
rustls-pki-types = "1"
uuid = { version = "1.8.0", features = ["v4"] }

[dev-dependencies]
tracing-subscriber = "0.3.18"

[build-dependencies]
prost-build = "0.12"