[package]
name = "risdb-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pingora = "0.1.0"
pingora-core = "0.1.0"
pingora-http = "0.1.0"
pingora-proxy = "0.1.0"
log = "0.4"
structopt = "0.3"
async-trait = "0.1.42"
env_logger = "0.9"