[package]
name = "risdb"
version = "0.1.0"
edition = "2021"

# TODO: A separate client and server won't be created like this in the future
[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/server.rs"

# TODO: A separate client and server won't be created like this in the future
[[bin]] # Bin to run the HelloWorld gRPC client
name = "helloworld-client"
path = "src/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.9", features = ["tls"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Local Dependencies
raft-grpc = { path = "../raft-grpc", version = "0.1.0" }
risdb-hyper = { path = "../risdb-hyper", version = "0.1.0" }

[dev-dependencies]
hyper = { workspace = true, features = ["full"] }
